fix: better contrast for light theme

--- a/src/app.css
+++ b/src/app.css
@@ -165,7 +165,7 @@
   --input: hsl(0 0% 66.6667%);
   --primary: hsl(0 0% 0%);
   --primary-foreground: hsl(0 0% 100%);
-  --secondary: hsl(0 0% 92.1569%);
+  --secondary: hsl(0 0% 88.2353%);
   --secondary-foreground: hsl(0 0% 0%);
   --accent: hsl(0 0% 83.14%);
   --accent-foreground: hsl(0 0% 0%);
